update launcher (the launcher is currently broken)